--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
+  font-family: 'Roboto', sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
